Another small fix to text overflow

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -49,7 +49,7 @@ section {
   font-family: Arial, Helvetica, sans-serif;
   position: absolute;
   top: 30px;
-  padding: 0px 10px 0px 10px;
+  padding: 0 0 0 10px;
 }
 
 /* Desktop */
